--- a/style.css
+++ b/style.css
@@ -107,7 +107,7 @@ a:hover .tooltip{
     height:100%;
     transform-style: preserve-3d;
     transform-origin: 50% 50% -50vw;
-    transform: rotateY(-180deg);
+    transform: rotateY(-270deg);
 }
 .section{
     position: absolute;
@@ -118,7 +118,7 @@ a:hover .tooltip{
     backface-visibility: hidden;
 }
 .section:nth-child(even){
-    background-color: var(--seecond-bg-color);
+    background: var(--seecond-bg-color);
 }
 .section.about{
     transform: translateX(50vw) translateZ(-50vw) rotateY(90deg);
@@ -126,6 +126,9 @@ a:hover .tooltip{
 .section.resume{
     transform: translateZ(-100vw) rotateY(-180deg);
     transform-origin: 50%;
+}
+.section.portfolio{
+    transform: translateX(-50vw) translateZ(-50vw) rotateY(-90deg);
 }
 .home,
 .about {
@@ -231,7 +234,8 @@ a:hover .tooltip{
 .about-info .btn{
     padding:1.2rem 4rem;
 }
-.reasume{
+.resume,
+.portfolio{
     padding-top: 2rem;
     padding-bottom: 28rem;
 }
@@ -251,7 +255,8 @@ a:hover .tooltip{
     color: var(--tab-list-color);
     transition: .5s;
 }
-.tab-list.resume-list.active{
+.tab-list.resume-list.active,
+.tab-list.portfolio-list.active{
     border-color: var(--main-color);
     color:var(--main-color);
 }
@@ -286,7 +291,8 @@ a:hover .tooltip{
     opacity:0;
     transform:scale(.8);    
 }
-.tab-grid.resume-box.active{
+.tab-grid.resume-box.active,
+.tab-grid.portfolio-box.active{
     visibility: visible;
     opacity: 1;
     transform: scale(1);
@@ -329,5 +335,79 @@ a:hover .tooltip{
 }
 .tab-item p{
     margin-top: 1rem;
+
+}
+.resume-box.skills{
+    grid-template-columns: repeat(auto-fit,minmax(16rem,1fr));
+}
+.resume-box.skills .resume-item{
+    align-items: center;
+}
+.resume-box.skills .resume-item i{
+    font-size: 8rem;
+}
+.resume-box.skills .resume-item:hover{
+    color:var(--main-color);
+}
+.resume-box.skills .resume-item p{
+    margin-top: 0;
+}
+.portfolio-list:nth-child(2) {
+    justify-content: flex-end;
+
+}
+.portfolio-box.work .portfolio-item{
+    position: relative;
+}
+.portfolio-box.work .portfolio-item::before{
+    content: '';
+    position: absolute;
+    left:0;
+    top:0;
+    width:100%;
+    height:100%;
+    background: var(--third-bg-color);
+    border-radius: .8rem;
+    z-index:1;
+    opacity:0;
+    transition:.3s;
+}
+.portfolio-box.work .portfolio-item:hover::before{
+    opacity:.9;
+
+}
+
+.portfolio-item .work-img{
+    position: absolute;
+    left:0;
+    top:0;
+    width:100%;
+    height: 100%;
+    border-radius: .8rem;
+    overflow: hidden;
+}
+.portfolio-item .work-img img{
+    display:block;
+    width:100%;
+    height: 100%;
+    object-fit: cover;
+    transition:.3s;
+
+}
+.portfolio-item:hover .work-img img{
+  transform:scale(1.2);
+
+}
+.portfolio-item .work-info{
+    z-index:1;
+}
+.portfolio-item .work-info h4{
+    line-height: 1;
+}
+.portfolio-item .worf-info .tech-used{ 
+    color:var(--main-color);
+    border-bottom: .1rem solid var(--white-color);
+    padding-bottom: 1rem;
+    margin-bottom: 1rem;
 
 }
